# esign-employee-name

./: .gitignore  package-lock.json  package.json  pyproject.toml  wrangler.toml
plans/260324-1104-esign-employee-name/: phase-01-project-setup.md  phase-02-text-extractor.md  phase-03-signature-placer.md  phase-04-cli.md  phase-05-api.md  phase-06-integration-testing.md  plan.md
plans/reports/: brainstorm-260324-1134-esign-web-ui.md  brainstormer-260324-1106-esign-approaches.md  code-reviewer-260324-1110-red-team-failure-modes.md  code-reviewer-260324-1110-scope-review.md  code-reviewer-260324-1123-implementation-review.md  fullstack-developer-260324-1117-phase-02-pdf-extractor.md  fullstack-developer-260324-1121-phase-04-cli.md  fullstack-developer-260324-1121-phase-05-fastapi-interface.md  researcher-260324-1104-pyhanko-api-research.md  researcher-260324-1252-pdf-encryption-research.md  tester-260324-1123-integration-tests.md
src/esign/: __init__.py  api.py  cli.py  extractor.py  prepare.py  signer.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_cli.py  test_extractor.py  test_integration.py  test_signer.py
tests/fixtures/: create-test-pdfs.py
worker/: index.js  pdf-encrypt.js
